--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "test",
   "version": "1.0.0",
   "license": "MIT",
-  
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
@@ -25,7 +24,8 @@
     "rxjs": "7.8.1",
     "tslib": "^2.5.3",
     "zone.js": "0.13.1",
-    "@nx/angular": "16.7.4"
+    "@nx/angular": "16.7.4",
+    "angular-oauth2-oidc": "^13.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.2.0",
